[package]
name = "vape4d"
version = "0.2.0"
edition = "2021"
authors = ["Simon Niedermayr"]
description = "4D Volume Viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.3", features = ["webgl"] }
winit = "0.29.15"
cgmath = { version = "0.18.0", features = [
    "bytemuck",
], git = 'https://github.com/rustgd/cgmath' }
env_logger = "0.11.3"
clap = { version = "4.4.6", features = ["derive"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
anyhow = "1.0.70"
byteorder = "1.4.3"
num-traits = "0.2.16"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
log = "0.4.20"
once_cell = { version = "1.19.0", optional = true }
image = "0.25.0"


egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = { version = "0.27.2", features = [], default-features = false }
egui_plot = "0.27.2"

npyz = { version = "0.8.3", features = ["npz", "half"] }
futures-intrusive = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# colormaps in binary
include_dir = { version = "0.7.3", optional = true }
# python bindings
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

web-sys = { version = "0.3.69", features = ["GpuColorDict"] }
rfd = { version = "0.14.1", features = ["file-handle-inner"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.42"
console_log = "1"
log = "0.4"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-cli = "0.2.92"

[features]
colormaps = ["dep:once_cell", "dep:include_dir"]
python = ["dep:pyo3", "dep:numpy"]

[lib]
path = "src/lib.rs"
name = "vape4d"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vape4d"
path = "src/bin/vape4d.rs"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
