[package]
name = "vape4d"
version = "0.2.4"
edition = "2021"
authors = ["Simon Niedermayr"]
description = "4D Volume Viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "24.0", features = ["webgl"], default-features = true}
winit = "0.30.9"
cgmath = { version = "0.18.0", features = [
    "bytemuck",
], git = 'https://github.com/rustgd/cgmath' }
env_logger = "0.11.7"
clap = { version = "4.5.34", features = ["derive"] }#
bytemuck = { version = "1.22", features = ["derive"] }
anyhow = "1.0"
byteorder = "1.4.3"
num-traits = "0.2.16"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
log = "0.4"
once_cell = { version = "1.20" }
image = "0.25.5"


egui = "0.31.1"
egui-wgpu = "0.31"
egui-winit = { version = "0.31.1", features = [], default-features = false }
egui_plot = "0.31.0"

npyz = { version = "0.8.3", features = ["npz", "half"] }
futures-intrusive = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# colormaps in binary
include_dir = { version = "0.7.3" }
# python bindings
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
numpy = { version = "0.24.0", optional = true, features = ["half"] }
ndarray = { version = "0.16.1", features = ["rayon"]}
rfd = { version = "0.15.2", features = ["file-handle-inner"] }
rayon = {version = "1.5.1"}
egui-probe = {version="0.8.0", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4.0", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

web-sys = { version = "0.3.77", features = ["GpuColorDict",'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window','Location','UrlSearchParams'] }
getrandom = { version = "0.2.4", features = ["js"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
console_log = {version = "1.0", features = ["color"] }
log = "0.4"
# instant = { version = "0.1.12", features = ["wasm-bindgen"] }
web-time = { version = "1.1.0" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-cli = "0.2.100"

[features]
python = ["dep:pyo3", "dep:numpy"]

[lib]
path = "src/lib.rs"
name = "vape4d"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vape4d"
path = "src/bin/vape4d.rs"

[profile.web-release]
inherits = "dev"
opt-level = "s"
# strip = "debuginfo"
