[package]
name = "vape4d"
version = "0.2.7"
edition = "2021"
authors = ["Simon Niedermayr"]
description = "4D Volume Viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "24.0", features = ["webgl"] }
winit = "0.30.9"
cgmath = { version = "0.18.0", features = [
    "bytemuck",
], git = 'https://github.com/rustgd/cgmath' }
env_logger = "0.11.3"
clap = { version = "4.4.6", features = ["derive"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
anyhow = "1.0.70"
byteorder = "1.4.3"
num-traits = "0.2.16"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
log = "0.4.20"
once_cell = { version = "1.19.0", optional = true }
image = "0.25.0"


egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = { version = "0.31.0", features = [], default-features = false }
egui_plot = "0.32.1"

npyz = { version = "0.8.3", features = ["npz", "half"] }
futures-intrusive = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# colormaps in binary
include_dir = { version = "0.7.3", optional = true }
# python bindings
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true, features = ["half"] }
rfd = { version = "0.15.3", features = ["file-handle-inner"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4.0", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

web-sys = { version = "0.3.69", features = ["GpuColorDict",'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window','Location','UrlSearchParams'] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.42"
console_log = "1"
log = "0.4"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-cli = "0.2.100"

[features]
colormaps = ["dep:once_cell", "dep:include_dir"]
python = ["dep:pyo3", "dep:numpy"]

[lib]
path = "src/lib.rs"
name = "vape4d"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vape4d"
path = "src/bin/vape4d.rs"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
